# mcp-rag

./: .env.example  .gitignore  MANIFEST.in  PROJECT_ARCHITECTURE.md  README.md  feat.md  pyproject.toml  test_mcp_tools.py  uv.toml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.js
frontend/src/lib/components/: PageShell.svelte  PageTabs.svelte  (+2 more)
src/: rag_core_openai.py
src/mcp_rag/: __init__.py  app_factory.py  cli.py  config.py  context.py  contracts.py  database.py  document_processor.py  embedding.py  http_server.py  knowledge_bases.py  llm.py  main.py  mcp_server.py  observability.py  security.py  server.py  service_facade.py  shell_factory.py  spa_assets.py  text_splitter.py  web.py
src/mcp_rag/retrieval/: __init__.py  collection_index.py  hybrid_service.py  query_classifier.py
src/mcp_rag/services/: __init__.py  chat_service.py  indexing_service.py  retrieval_cache.py  retrieval_service.py  runtime.py
src/services/: cloud_openai.py
src/tools/: __init__.py  document_tools.py  search_tools.py  utility_tools.py
src/utils/: config.py
tests/: test_config.py  test_context.py  test_http_server.py  test_mcp_server.py  test_observability.py  test_packaging_metadata.py  test_security.py  test_service_facade.py
tests/core/indexing/: test_indexing.py
tests/e2e/: test_shell_integration.py
tests/retrieval/: test_collection_index.py  test_hybrid_service.py  test_query_classifier.py
tests/services/: test_provider_budget.py  test_retrieval_cache.py  test_service_layers.py
(+43 files in other folders)
