[project]
name = "mcp-rag"
version = "0.3.16"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
# CLI entrypoint: `mcp-rag` will invoke mcp_rag.cli:main
mcp-rag = "mcp_rag.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

